--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -30,6 +30,7 @@
     "nitro": "latest",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "replicate": "^1.0.1",
     "resend": "^6.4.2",
     "tailwindcss": "^4.0.6",
     "vite-tsconfig-paths": "^5.1.4"
