--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "cross-env NODE_OPTIONS=\"--import ./instrument.server.mjs\" vite dev --port 3000",
-    "build": "vite build && cp instrument.server.mjs .output/server",
+    "build": "vite build && node -e \"require('fs').cpSync('instrument.server.mjs','.output/server/instrument.server.mjs')\"",
     "serve": "vite preview",
     "test": "vitest run",
     "lint": "eslint --ext .ts,.tsx . && prettier --check .",
