--- a/apps/web/wrangler.jsonc
+++ b/apps/web/wrangler.jsonc
@@ -1,7 +1,12 @@
 {
-  "$schema": "node_modules/wrangler/config-schema.json",
-  "name": "loccitane-photobooth-web",
-  "compatibility_date": "2025-09-02",
-  "compatibility_flags": ["nodejs_compat"],
-  "main": "@tanstack/react-start/server-entry",
+	"$schema": "node_modules/wrangler/config-schema.json",
+	"name": "shell-photobooth-web",
+	"compatibility_date": "2025-09-02",
+	"compatibility_flags": [
+		"nodejs_compat"
+	],
+	"main": "@tanstack/react-start/server-entry",
+	"vars": {
+		"REPLICATE_MODEL": "google/nano-banana"
+	},
 }
