chore: add the prompts to wrangler.jsonc

--- a/apps/web/wrangler.jsonc
+++ b/apps/web/wrangler.jsonc
@@ -9,6 +9,9 @@
 	"vars": {
 		"REPLICATE_MODEL": "google/nano-banana",
 		"RESEND_FROM_EMAIL": "Photobooth <no-reply@photobooth.playlistx.studio>",
-		"NODE_ENV": "production"
+		"NODE_ENV": "production",
+		"RACING_PROMPT_PITCREW": "Insert the face of the person from the first image onto the body of the person in the second image. Keep the pit crew outfit, background, and pose exactly the same. Make it look natural and photorealistic.",
+		"RACING_PROMPT_MOTOGP": "Insert the face of the person from the first image onto the body of the person in the second image. Keep the MotoGP racing suit, background, and pose exactly the same. Make it look natural and photorealistic.",
+		"RACING_PROMPT_F1": "Insert the face of the person from the first image onto the body of the person in the second image. Keep the F1 racing suit, background, and pose exactly the same. Make it look natural and photorealistic.",
 	},
 }
