--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -54,6 +54,7 @@
     "@supabase/supabase-js": "^2.81.1",
     "cookie": "^1.0.2",
     "electron-squirrel-startup": "^1.0.1",
+    "qrcode.react": "^4.2.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router": "^7.1.3",
